Остались ошибки с нумерацией и общий вид, всё остальное норм

--- a/wwwroot/htmlpage.html
+++ b/wwwroot/htmlpage.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="w-100 text-center">
-        <a class="btn btn-primary w-25 mb-5 mt-5" href="Product.html" role="button">Товар</a>
+        <a class="btn btn-primary w-25 mb-5" asp-area="" asp-controller="User" asp-action="Index">User</a>
         <br />
         <a class="btn btn-primary w-25 mb-5" href="User.html" role="button">Пользователь</a> <br />
         <a class="btn btn-primary w-25 mb-5" href="Category.html" role="button">Категория</a>
